[gd_scene load_steps=4 format=3 uid="uid://3o8nbg2v248a"]

[ext_resource type="Script" uid="uid://bpfbqraltsta0" path="res://world/levels/puddle/puddle.gd" id="1_2gbto"]
[ext_resource type="Texture2D" uid="uid://chnnd6opa6df5" path="res://temp_art/gartic/fish_man.png" id="2_ijjwc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cismt"]
size = Vector3(1.5878906, 0.15454102, 1)

[node name="Puddle" type="Node3D"]

[node name="Area3D" type="Area3D" parent="."]
script = ExtResource("1_2gbto")

[node name="Sprite3D" type="Sprite3D" parent="Area3D"]
transform = Transform3D(0.5, 0, 0, 0, -2.1855694e-08, -0.5, 0, 0.5, -2.1855694e-08, 0, 0, 0)
texture = ExtResource("2_ijjwc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.025390625, 0.010375977, 0)
shape = SubResource("BoxShape3D_cismt")

[node name="DamageTimer" type="Timer" parent="Area3D"]
unique_name_in_owner = true
one_shot = true

[connection signal="area_entered" from="Area3D" to="Area3D" method="_on_area_entered"]
[connection signal="area_exited" from="Area3D" to="Area3D" method="_on_area_exited"]
[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="body_exited" from="Area3D" to="Area3D" method="_on_body_exited"]
